--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,18 @@
 name = "Workflows"
 uuid = "115008b9-7a42-4cba-af26-8bebb992e909"
 authors = ["Johnny Chen <johnnychen94@hotmail.com>"]
-version = "0.1.0"
+version = "0.1.0-dev"
+
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
+CSV = "0.6, 0.7, 0.8"
+DataFrames = "0.21, 0.22, 1"
+JSON3 = "1"
 julia = "1"
 
 [extras]
