--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,13 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
 Configurations = "0.17"
 JSON3 = "1"
 TOML = "1"
+YAML = "0.4"
 julia = "1.6"
 
 [extras]
