CI: run all examples
The "examples/" directory is reorganized a bit with some fixes to ensure
all examples are runnable in new setup.

README.md and run.jl are added to improve the discoverbility.

Examples CI only runs on ubuntu to ensure all examples are correctly
written. Cross-platform and functionalities are checked by unit tests.

--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -50,3 +50,10 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
+
+  test_examples:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: julia --startup=no --project=examples -e 'using Pkg; Pkg.develop(path=".")'
+      - run: julia --startup=no --project=examples examples/run.jl
