examples: maintain isolated project file
This commit introduces an "examples/examples.yml" file that triggers the
execution of all examples using shell runner so that we have a clean and
isolated project environment for each example.

--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -55,5 +55,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: julia --startup=no --project=examples -e 'using Pkg; Pkg.develop(path=".")'
-      - run: julia --startup=no --project=examples examples/run.jl
+      - run: julia --startup=no --color=yes --project=examples -e 'using Pkg; Pkg.develop(path=".")'
+      - run: julia --startup=no --color=yes --project=examples examples/run.jl
