dialect: implement manifest_runner
This dialect allows users to specify custom runner and thus avoid
duplication.

--- a/dialects.toml
+++ b/dialects.toml
@@ -1,2 +1,8 @@
+[manifest_runner]
+version = "0.1.0"
+provider = "Workflows"
+requires = ["manifest"]
+
 [manifest]
 version = "0.1.0"
+provider = "Workflows"
