--- a/test/dialects/examples/manifest/good/filter.toml
+++ b/test/dialects/examples/manifest/good/filter.toml
@@ -7,7 +7,7 @@ dialect = "manifest"
     runner = "shell"
     [tasks.run]
         command = "julia --startup=no -e 'println(\"task1: 1\")'"
-        capture = true
+        capture_stdout = true
 
 [[tasks]]
     name = "task2"
@@ -15,7 +15,7 @@ dialect = "manifest"
     runner = "shell"
     [tasks.run]
         command = "julia --startup=no -e 'println(\"task2: 2\")'"
-        capture = true
+        capture_stdout = true
 
 [[tasks]]
     name = "task3"
@@ -25,7 +25,7 @@ dialect = "manifest"
         values = ["3.1", "3.2", "3.3"]
     [tasks.run]
         command = "julia --startup=no -e 'println(${{matrix.values}})'"
-        capture = true
+        capture_stdout = true
 
 [[tasks]]
     name = "summary_single"
@@ -34,7 +34,7 @@ dialect = "manifest"
     requires = ["1", "2"]
     [tasks.run]
         command = "julia --startup=no -e 'println(read(ENV[\"WORKFLOW_TMP_INFILE\"], String))'"
-        capture = true
+        capture_stdout = true
 
 [[tasks]]
     name = "summary_loop"
@@ -43,7 +43,7 @@ dialect = "manifest"
     requires = ["3"]
     [tasks.run]
         command = "julia --startup=no -e 'println(read(ENV[\"WORKFLOW_TMP_INFILE\"], String))'"
-        capture = true
+        capture_stdout = true
 
 [[tasks]]
     name = "summary_all"
@@ -52,4 +52,4 @@ dialect = "manifest"
     requires = ["4_1", "4_2"]
     [tasks.run]
         command = "julia --startup=no -e 'println(read(ENV[\"WORKFLOW_TMP_INFILE\"], String))'"
-        capture = true
+        capture_stdout = true
