--- a/test/examples/manifest/simple_runner.yml
+++ b/test/examples/manifest/simple_runner.yml
@@ -11,7 +11,7 @@ runners:
     runner: shell
     run:
       command: julia --startup=no --project=. ${{ tasks.run.script }}
-      capture: true
+      capture_stdout: true
 
   julia:
     runner: shell
